19-monster-messages/part_2/MonsterMessages.g4
grammar MonsterMessages;
// Tokens
r34: r50 r12 | r92 r57;
r42: r9 r12 | r124 r57;
r115: r12 r106 | r57 r91;
r106: r57 r66 | r12 r12;
r71: r39 r57 | r27 r12;
r56: r69 r57 | r6 r12;
r10: r12 r53 | r57 r77;
r46: r3 r57 | r122 r12;
r20: r66 r75;
r67: r12 r126 | r57 r106;
r78: r57 r28 | r12 r33;
r25: r3 r12 | r116 r57;
r74: r46 r12 | r24 r57;
r103: r12 r40 | r57 r116;
r94: r126 r57 | r91 r12;
r116: r57 r12 | r12 r12;
r60: r57 r61 | r12 r48;
r0: r8 r11;
r110: r95 r57 | r81 r12;
r55: r75 r57 | r106 r12;
r100: r57 r41 | r12 r27;
r58: r116 r12 | r85 r57;
r61: r92 r57 | r75 r12;
r84: r47 r12 | r87 r57;
r65: r72 r12 | r48 r57;
r5: r55 r12 | r77 r57;
r112: r102 r57 | r97 r12;
r99: r18 r12 | r108 r57;
r39: r57 r50 | r12 r15;
r52: r121 r12 | r39 r57;
r47: r125 r57 | r74 r12;
r31: r57 r117 | r12 r73;
r4: r40 r57 | r98 r12;
r53: r91 r57 | r106 r12;
r124: r84 r12 | r23 r57;
r48: r57 r126 | r12 r116;
r123: r85 r12 | r116 r57;
r26: r57 r121 | r12 r79;
r51: r61 r57 | r107 r12;
r6: r12 r86 | r57 r109;
r122: r66 r66;
r93: r57 r68 | r12 r110;
r37: r40 r57 | r91 r12;
r44: r57 r50 | r12 r85;
r12: 'a';
r45: r25 r57 | r58 r12;
r19: r57 r116 | r12 r50;
r33: r57 r36 | r12 r70;
r108: r16 r12 | r46 r57;
r95: r12 r98 | r57 r75;
r82: r85 r57;
r69: r57 r41 | r12 r118;
r104: r12 r3 | r57 r75;
r35: r122 r57 | r91 r12;
r32: r12 r53 | r57 r16;
r27: r85 r12 | r40 r57;
r40: r66 r12 | r12 r57;
r66: r57 | r12;
r101: r57 r88 | r12 r103;
r109: r57 r116 | r12 r106;
r80: r57 r82 | r12 r49;
r83: r85 r57 | r126 r12;
r64: r12 r126 | r57 r3;
r30: r12 r62 | r57 r64;
r17: r115 r57 | r67 r12;
r86: r12 r116 | r57 r15;
r15: r12 r57;
r24: r57 r75 | r12 r126;
r11: r42 r31 | r42 r11 r31;
r118: r12 r126 | r57 r40;
r98: r12 r57 | r57 r12;
r16: r126 r57;
r89: r57 r34 | r12 r46;
r113: r92 r12 | r15 r57;
r126: r57 r12 | r57 r57;
r68: r12 r118 | r57 r123;
r79: r12 r15 | r57 r75;
r91: r12 r12;
r96: r83 r12 | r107 r57;
r105: r30 r12 | r51 r57;
r49: r57 r122 | r12 r50;
r29: r57 r63 | r12 r76;
r117: r57 r119 | r12 r78;
r76: r96 r57 | r90 r12;
r114: r12 r1 | r57 r93;
r73: r114 r12 | r112 r57;
r54: r91 r12 | r50 r57;
r8: r42 | r42 r8;
r63: r12 r7 | r57 r111;
r102: r57 r101 | r12 r5;
r41: r116 r12 | r40 r57;
r28: r57 r10 | r12 r32;
r121: r91 r12 | r116 r57;
r7: r13 r57 | r104 r12;
r23: r56 r57 | r105 r12;
r59: r12 r71 | r57 r60;
r92: r57 r57;
r70: r4 r12 | r21 r57;
r57: 'b';
r119: r57 r59 | r12 r43;
r77: r57 r85 | r12 r50;
r87: r57 r89 | r12 r17;
r85: r57 r12;
r43: r57 r26 | r12 r45;
r90: r22 r57 | r54 r12;
r50: r66 r57 | r57 r12;
r3: r12 r57 | r57 r57;
r88: r106 r66;
r107: r12 r3 | r57 r15;
r36: r37 r12 | r107 r57;
r97: r52 r57 | r80 r12;
r13: r122 r57 | r106 r12;
r2: r57 r65 | r12 r120;
r120: r57 r35 | r12 r94;
r14: r2 r12 | r99 r57;
r18: r72 r12 | r121 r57;
r75: r12 r12 | r57 r57;
r1: r57 r100 | r12 r38;
r81: r57 r106 | r12 r75;
r9: r12 r14 | r57 r29;
r111: r35 r12 | r113 r57;
r38: r57 r20 | r12 r19;
r21: r116 r57 | r126 r12;
r22: r57 r3 | r12 r50;
r72: r126 r12 | r91 r57;
r62: r91 r57;
r125: r24 r57 | r44 r12;

ANYTHING: .;
WS: [ \r\t\n]+ -> skip;

message: r0 EOF;
