19-monster-messages/part_2/MonsterMessagesParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from MonsterMessages.g4 by ANTLR 4.9

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9")]
[System.CLSCompliant(false)]
public partial class MonsterMessagesParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, ANYTHING=3, WS=4;
	public const int
		RULE_r34 = 0, RULE_r42 = 1, RULE_r115 = 2, RULE_r106 = 3, RULE_r71 = 4, 
		RULE_r56 = 5, RULE_r10 = 6, RULE_r46 = 7, RULE_r20 = 8, RULE_r67 = 9, 
		RULE_r78 = 10, RULE_r25 = 11, RULE_r74 = 12, RULE_r103 = 13, RULE_r94 = 14, 
		RULE_r116 = 15, RULE_r60 = 16, RULE_r0 = 17, RULE_r110 = 18, RULE_r55 = 19, 
		RULE_r100 = 20, RULE_r58 = 21, RULE_r61 = 22, RULE_r84 = 23, RULE_r65 = 24, 
		RULE_r5 = 25, RULE_r112 = 26, RULE_r99 = 27, RULE_r39 = 28, RULE_r52 = 29, 
		RULE_r47 = 30, RULE_r31 = 31, RULE_r4 = 32, RULE_r53 = 33, RULE_r124 = 34, 
		RULE_r48 = 35, RULE_r123 = 36, RULE_r26 = 37, RULE_r51 = 38, RULE_r6 = 39, 
		RULE_r122 = 40, RULE_r93 = 41, RULE_r37 = 42, RULE_r44 = 43, RULE_r12 = 44, 
		RULE_r45 = 45, RULE_r19 = 46, RULE_r33 = 47, RULE_r108 = 48, RULE_r95 = 49, 
		RULE_r82 = 50, RULE_r69 = 51, RULE_r104 = 52, RULE_r35 = 53, RULE_r32 = 54, 
		RULE_r27 = 55, RULE_r40 = 56, RULE_r66 = 57, RULE_r101 = 58, RULE_r109 = 59, 
		RULE_r80 = 60, RULE_r83 = 61, RULE_r64 = 62, RULE_r30 = 63, RULE_r17 = 64, 
		RULE_r86 = 65, RULE_r15 = 66, RULE_r24 = 67, RULE_r11 = 68, RULE_r118 = 69, 
		RULE_r98 = 70, RULE_r16 = 71, RULE_r89 = 72, RULE_r113 = 73, RULE_r126 = 74, 
		RULE_r68 = 75, RULE_r79 = 76, RULE_r91 = 77, RULE_r96 = 78, RULE_r105 = 79, 
		RULE_r49 = 80, RULE_r29 = 81, RULE_r117 = 82, RULE_r76 = 83, RULE_r114 = 84, 
		RULE_r73 = 85, RULE_r54 = 86, RULE_r8 = 87, RULE_r63 = 88, RULE_r102 = 89, 
		RULE_r41 = 90, RULE_r28 = 91, RULE_r121 = 92, RULE_r7 = 93, RULE_r23 = 94, 
		RULE_r59 = 95, RULE_r92 = 96, RULE_r70 = 97, RULE_r57 = 98, RULE_r119 = 99, 
		RULE_r77 = 100, RULE_r87 = 101, RULE_r85 = 102, RULE_r43 = 103, RULE_r90 = 104, 
		RULE_r50 = 105, RULE_r3 = 106, RULE_r88 = 107, RULE_r107 = 108, RULE_r36 = 109, 
		RULE_r97 = 110, RULE_r13 = 111, RULE_r2 = 112, RULE_r120 = 113, RULE_r14 = 114, 
		RULE_r18 = 115, RULE_r75 = 116, RULE_r1 = 117, RULE_r81 = 118, RULE_r9 = 119, 
		RULE_r111 = 120, RULE_r38 = 121, RULE_r21 = 122, RULE_r22 = 123, RULE_r72 = 124, 
		RULE_r62 = 125, RULE_r125 = 126, RULE_message = 127;
	public static readonly string[] ruleNames = {
		"r34", "r42", "r115", "r106", "r71", "r56", "r10", "r46", "r20", "r67", 
		"r78", "r25", "r74", "r103", "r94", "r116", "r60", "r0", "r110", "r55", 
		"r100", "r58", "r61", "r84", "r65", "r5", "r112", "r99", "r39", "r52", 
		"r47", "r31", "r4", "r53", "r124", "r48", "r123", "r26", "r51", "r6", 
		"r122", "r93", "r37", "r44", "r12", "r45", "r19", "r33", "r108", "r95", 
		"r82", "r69", "r104", "r35", "r32", "r27", "r40", "r66", "r101", "r109", 
		"r80", "r83", "r64", "r30", "r17", "r86", "r15", "r24", "r11", "r118", 
		"r98", "r16", "r89", "r113", "r126", "r68", "r79", "r91", "r96", "r105", 
		"r49", "r29", "r117", "r76", "r114", "r73", "r54", "r8", "r63", "r102", 
		"r41", "r28", "r121", "r7", "r23", "r59", "r92", "r70", "r57", "r119", 
		"r77", "r87", "r85", "r43", "r90", "r50", "r3", "r88", "r107", "r36", 
		"r97", "r13", "r2", "r120", "r14", "r18", "r75", "r1", "r81", "r9", "r111", 
		"r38", "r21", "r22", "r72", "r62", "r125", "message"
	};

	private static readonly string[] _LiteralNames = {
		null, "'a'", "'b'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, "ANYTHING", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "MonsterMessages.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static MonsterMessagesParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public MonsterMessagesParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public MonsterMessagesParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class R34Context : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public R50Context r50() {
			return GetRuleContext<R50Context>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public R12Context r12() {
			return GetRuleContext<R12Context>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public R92Context r92() {
			return GetRuleContext<R92Context>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public R57Context r57() {
			return GetRuleContext<R57Context>(0);
		}
		public R34Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_r34; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMonsterMessagesListener typedListener = listener as IMonsterMessagesListener;
			if (typedListener != null) typedListener.EnterR34(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMonsterMessagesListener typedListener = listener as IMonsterMessagesListener;
			if (typedListener != null) typedListener.ExitR34(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMonsterMessagesVisitor<TResult> typedVisitor = visitor as IMonsterMessagesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitR34(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public R34Context r34() {
		R34Context _localctx = new R34Context(Context, State);
		EnterRule(_localctx, 0, RULE_r34);
		try {
			State = 262;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 256; r50();
				State = 257; r12();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 259; r92();
				State = 260; r57();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class R42Context : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public R9Context r9() {
			return GetRuleContext<R9Context>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public R12Context r12() {
			return GetRuleContext<R12Context>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public R124Context r124() {
			return GetRuleContext<R124Context>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public R57Context r57() {
			return GetRuleContext<R57Context>(0);
		}
		public R42Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_r42; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMonsterMessagesListener typedListener = listener as IMonsterMessagesListener;
			if (typedListener != null) typedListener.EnterR42(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMonsterMessagesListener typedListener = listener as IMonsterMessagesListener;
			if (typedListener != null) typedListener.ExitR42(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMonsterMessagesVisitor<TResult> typedVisitor = visitor as IMonsterMessagesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitR42(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public R42Context r42() {
		R42Context _localctx = new R42Context(Context, State);
		EnterRule(_localctx, 2, RULE_r42);
		try {
			State = 270;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 264; r9();
				State = 265; r12();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 267; r124();
				State = 268; r57();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class R115Context : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public R12Context r12() {
			return GetRuleContext<R12Context>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public R106Context r106() {
			return GetRuleContext<R106Context>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public R57Context r57() {
			return GetRuleContext<R57Context>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public R91Context r91() {
			return GetRuleContext<R91Context>(0);
		}
		public R115Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_r115; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMonsterMessagesListener typedListener = listener as IMonsterMessagesListener;
			if (typedListener != null) typedListener.EnterR115(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMonsterMessagesListener typedListener = listener as IMonsterMessagesListener;
			if (typedListener != null) typedListener.ExitR115(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMonsterMessagesVisitor<TResult> typedVisitor = visitor as IMonsterMessagesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitR115(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public R115Context r115() {
		R115Context _localctx = new R115Context(Context, State);
		EnterRule(_localctx, 4, RULE_r115);
		try {
			State = 278;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__0:
				EnterOuterAlt(_localctx, 1);
				{
				State = 272; r12();
				State = 273; r106();
				}
				break;
			case T__1:
				EnterOuterAlt(_localctx, 2);
				{
				State = 275; r57();
				State = 276; r91();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class R106Context : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public R57Context r57() {
			return GetRuleContext<R57Context>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public R66Context r66() {
			return GetRuleContext<R66Context>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public R12Context[] r12() {
			return GetRuleContexts<R12Context>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public R12Context r12(int i) {
			return GetRuleContext<R12Context>(i);
		}
		public R106Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_r106; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMonsterMessagesListener typedListener = listener as IMonsterMessagesListener;
			if (typedListener != null) typedListener.EnterR106(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMonsterMessagesListener typedListener = listener as IMonsterMessagesListener;
			if (typedListener != null) typedListener.ExitR106(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMonsterMessagesVisitor<TResult> typedVisitor = visitor as IMonsterMessagesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitR106(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public R106Context r106() {
		R106Context _localctx = new R106Context(Context, State);
		EnterRule(_localctx, 6, RULE_r106);
		try {
			State = 286;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 280; r57();
				State = 281; r66();
				}
				break;
			case T__0:
				EnterOuterAlt(_localctx, 2);
				{
				State = 283; r12();
				State = 284; r12();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class R71Context : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public R39Context r39() {
			return GetRuleContext<R39Context>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public R57Context r57() {
			return GetRuleContext<R57Context>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public R27Context r27() {
			return GetRuleContext<R27Context>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public R12Context r12() {
			return GetRuleContext<R12Context>(0);
		}
		public R71Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_r71; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMonsterMessagesListener typedListener = listener as IMonsterMessagesListener;
			if (typedListener != null) typedListener.EnterR71(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMonsterMessagesListener typedListener = listener as IMonsterMessagesListener;
			if (typedListener != null) typedListener.ExitR71(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMonsterMessagesVisitor<TResult> typedVisitor = visitor as IMonsterMessagesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitR71(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public R71Context r71() {
		R71Context _localctx = new R71Context(Context, State);
		EnterRule(_localctx, 8, RULE_r71);
		try {
			State = 294;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 288; r39();
				State = 289; r57();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 291; r27();
				State = 292; r12();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class R56Context : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public R69Context r69() {
			return GetRuleContext<R69Context>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public R57Context r57() {
			return GetRuleContext<R57Context>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public R6Context r6() {
			return GetRuleContext<R6Context>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public R12Context r12() {
			return GetRuleContext<R12Context>(0);
		}
		public R56Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_r56; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMonsterMessagesListener typedListener = listener as IMonsterMessagesListener;
			if (typedListener != null) typedListener.EnterR56(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMonsterMessagesListener typedListener = listener as IMonsterMessagesListener;
			if (typedListener != null) typedListener.ExitR56(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMonsterMessagesVisitor<TResult> typedVisitor = visitor as IMonsterMessagesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitR56(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public R56Context r56() {
		R56Context _localctx = new R56Context(Context, State);
		EnterRule(_localctx, 10, RULE_r56);
		try {
			State = 302;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,5,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 296; r69();
				State = 297; r57();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 299; r6();
				State = 300; r12();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class R10Context : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public R12Context r12() {
			return GetRuleContext<R12Context>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public R53Context r53() {
			return GetRuleContext<R53Context>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public R57Context r57() {
			return GetRuleContext<R57Context>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public R77Context r77() {
			return GetRuleContext<R77Context>(0);
		}
		public R10Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_r10; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMonsterMessagesListener typedListener = listener as IMonsterMessagesListener;
			if (typedListener != null) typedListener.EnterR10(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMonsterMessagesListener typedListener = listener as IMonsterMessagesListener;
			if (typedListener != null) typedListener.ExitR10(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMonsterMessagesVisitor<TResult> typedVisitor = visitor as IMonsterMessagesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitR10(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public R10Context r10() {
		R10Context _localctx = new R10Context(Context, State);
		EnterRule(_localctx, 12, RULE_r10);
		try {
			State = 310;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__0:
				EnterOuterAlt(_localctx, 1);
				{
				State = 304; r12();
				State = 305; r53();
				}
				break;
			case T__1:
				EnterOuterAlt(_localctx, 2);
				{
				State = 307; r57();
				State = 308; r77();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class R46Context : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public R3Context r3() {
			return GetRuleContext<R3Context>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public R57Context r57() {
			return GetRuleContext<R57Context>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public R122Context r122() {
			return GetRuleContext<R122Context>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public R12Context r12() {
			return GetRuleContext<R12Context>(0);
		}
		public R46Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_r46; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMonsterMessagesListener typedListener = listener as IMonsterMessagesListener;
			if (typedListener != null) typedListener.EnterR46(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMonsterMessagesListener typedListener = listener as IMonsterMessagesListener;
			if (typedListener != null) typedListener.ExitR46(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMonsterMessagesVisitor<TResult> typedVisitor = visitor as IMonsterMessagesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitR46(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public R46Context r46() {
		R46Context _localctx = new R46Context(Context, State);
		EnterRule(_localctx, 14, RULE_r46);
		try {
			State = 318;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,7,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 312; r3();
				State = 313; r57();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 315; r122();
				State = 316; r12();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class R20Context : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public R66Context r66() {
			return GetRuleContext<R66Context>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public R75Context r75() {
			return GetRuleContext<R75Context>(0);
		}
		public R20Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_r20; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMonsterMessagesListener typedListener = listener as IMonsterMessagesListener;
			if (typedListener != null) typedListener.EnterR20(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMonsterMessagesListener typedListener = listener as IMonsterMessagesListener;
			if (typedListener != null) typedListener.ExitR20(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMonsterMessagesVisitor<TResult> typedVisitor = visitor as IMonsterMessagesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitR20(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public R20Context r20() {
		R20Context _localctx = new R20Context(Context, State);
		EnterRule(_localctx, 16, RULE_r20);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 320; r66();
			State = 321; r75();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
